Added the vehicle choice div

--- a/index.html
+++ b/index.html
@@ -66,6 +66,23 @@
         <input type=" number" name="" class="input-staff">
       </div>
 
+      <div class="vehicle">
+        <span>Do you want to purchase a vehicle?</span>
+        <label for="chkYes">
+          <input type="radio" id="chkYes" name="chkPassPort" />
+          Yes
+        </label>
+        <label for="chkNo">
+          <input type="radio" id="chkNo" name="chkPassPort" />
+          No
+        </label>
+      </div>
+      <!-- <hr /> -->
+      <div id="dvPassport" style="display: none">
+        Passport Number:
+        <input type="text" id="txtPassportNumber" />
+      </div>
+
       <div class=" register-btn">
         <button type="submit">Next page</button>
       </div>
